# Production-Learning-to-Rank-LTR-System-Hotel-Search-Ranking

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
docs/: data_pipeline.md  evaluation.md  feature_engineering.md  model_training.md  overview.md  position_bias.md
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_bias_analysis.ipynb  04_model_training.ipynb  05_evaluation.ipynb
src/hotel_ranker/: __init__.py  config.py  pipeline.py
src/hotel_ranker/bias/: propensity.py
src/hotel_ranker/data/: acquisition.py  preprocessing.py  schema.py  splitting.py
src/hotel_ranker/evaluation/: error_analysis.py  metrics.py
src/hotel_ranker/features/: feature_pipeline.py  historical_features.py  match_features.py  raw_features.py
src/hotel_ranker/training/: label_engineering.py  trainer.py
tests/: test_features.py  test_label_engineering.py  test_metrics.py  test_preprocessing.py
