[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotel-ranker"
version = "1.0.0"
description = "Production Learning-to-Rank system for hotel search ranking"
requires-python = ">=3.9"
dependencies = [
    "kagglehub>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
"matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "jupyter>=1.0.0", "ipykernel>=6.0.0"]

[project.scripts]
hotel-ranker = "hotel_ranker.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]
